styles/main.css
/* ... */
.afmbe-jesuisfrog.sheet.actor.dark-mode button,
.afmbe-jesuisfrog.sheet.item.dark-mode button {
    color: rgb(231, 231, 231);
    background: rgb(85, 85, 85);
    border: 1px solid black;
    height: 25px;
    line-height: 10px;
}

.afmbe-jesuisfrog.sheet.actor.dark-mode input,
.afmbe-jesuisfrog.sheet.actor.dark-mode select,
.afmbe-jesuisfrog.sheet.item.dark-mode input,
.afmbe-jesuisfrog.sheet.item.dark-mode select {
    color: rgb(231, 231, 231);
}

.afmbe-jesuisfrog.sheet.item.dark-mode .window-content .editable {
    background: rgb(45, 51, 56);
}

.afmbe-jesuisfrog.dark-mode option {
    background: rgb(22, 22, 22);
}

.app.window-app.dialog.dark-mode .window-content {
    background: rgb(22, 22, 22);
}

.app.window-app.dialog.dark-mode .dialog-content {
    color: rgb(231, 231, 231);
    padding: 0 5px;
    background: rgb(41, 50, 59);
}

.app.window-app.dialog.dark-mode .dialog-buttons button {
    color: rgb(231, 231, 231);
    background: rgb(85, 85, 85);
    border: 1px solid black;
}

.afmbe-jesuisfrog.dark-mode .sheet-flex-container {
    background: rgb(62, 64, 66);
}

.afmbe-jesuisfrog.dark-mode .sheet-sidebar {
    background: rgb(90, 93, 95);
}

.afmbe-jesuisfrog.dark-mode .bio-container h2,
.afmbe-jesuisfrog.dark-mode .contacts-container h2,
.afmbe-jesuisfrog.dark-mode .character-details-container h2,
.afmbe-jesuisfrog.dark-mode .core-item-container h2,
.afmbe-jesuisfrog.dark-mode .attribute-container h2,
.afmbe-jesuisfrog.dark-mode h2.header-with-button {
    background: var(--dark-mode-colorbar);
}

.afmbe-jesuisfrog.dark-mode .weapon-table,
.afmbe-jesuisfrog.dark-mode .item-table,
.afmbe-jesuisfrog.dark-mode .qualities-container,
.afmbe-jesuisfrog.dark-mode .drawbacks-container,
.afmbe-jesuisfrog.dark-mode .skills-container,
.afmbe-jesuisfrog.dark-mode .powers-container,
.afmbe-jesuisfrog.dark-mode .aspects-container {
    background: rgba(78, 78, 78, 0.603);
}

.afmbe-jesuisfrog.dark-mode .equipment-header {
    background: rgba(124, 118, 118, 0.493);
}

.afmbe-jesuisfrog.dark-mode tbody tr:nth-child(even) {
    background: rgba(46, 46, 46, 0.541);
}

.afmbe-jesuisfrog.dark-mode .sheet-nav-container {
    background: var(--dark-mode-colorbar);
}

.afmbe-jesuisfrog.dark-mode .item-description-sidebar {
    border-left: 1px solid rgb(0, 0, 0);
}

.afmbe-jesuisfrog.window-app.dialog.dark-mode .afmbe-jesuisfrog-dialog-menu {
    background: rgb(41, 50, 59);
    color: rgb(231, 231, 231);
}

.afmbe-jesuisfrog.window-app.dialog.dark-mode .afmbe-jesuisfrog-dialog-menu-text-box {
    background: rgba(124, 118, 118, 0.493);
}

.afmbe-jesuisfrog.window-app.dialog.dark-mode input,
.afmbe-jesuisfrog.window-app.dialog.dark-mode select {
    color: rgb(231, 231, 231);
}

.afmbe-jesuisfrog.dark-mode .item-name:hover {
    font-weight: bold;
}

